--- a/config/application.yaml
+++ b/config/application.yaml
@@ -5,5 +5,6 @@ datasource:
   port: 3306
   database: GinDemo
   username: root
-  password: vlt159.0
+  password: root
   charset: utf8
+  loc: Asia/Shanghai
